1999-09-23  Jeff Hobbs  <hobbs@scriptics.com>

	* README:
	* generic/tcl.h:
	* tools/tcl.wse.in: updated text to reflect 8.2.1 where necessary

1999-09-22  Jennifer Hom  <jenn@scriptics.com>

	* tests/tcltest.test: Added 'exit' calls to the scripts that the
	test creates and added tests for -tmpdir and -args.
	
	* tests/env.test:
	* tests/exec.test: Added 'exit' calls to scripts that the tests
	themselves write.

	* tests/README: Cleaned up documentation in README so that it
	refers to variables and documentation that actually exist.  Also
	added missing documentation for flag usage.

	* library/tcltest1.0/tcltest.tcl: Added a -args flag that sets a
	variable named ::tcltest::parameters based on whatever's being
	sent in as the argument to the -args flag.  Modified tcltest so
	that tcltest namespace variables are only initialized to their
	default values if they did not previously exist.  Modified the
	::tcltest::testConstraints variable so that it isn't unset every
	time ::tcltest::initConstraints is called.  Modified command line
	processing so that they are only processed if ::tcltest doesn't
	have a child namespace (if there is a child namespace, then the
	command line arguments *must* be processed in that namespace).

1999-09-21  Jeff Hobbs  <hobbs@scriptics.com>

	* tests/env.test:
	* unix/Makefile.in: added support for AIX LIBPATH env var [Bug:	2793]
	removed second definition of INCLUDE_INSTALL_DIR (the one that
	referenced @includedir@) [Bug: 2805]
	* unix/dltest/Makefile.in: added -lc to LIBS [Bug: 2794]

	* tests/timer.test: changed after delay in timer test 6.29 from
	1 to 10. [Bug: 2796]

	* tests/pkg.test:
	* generic/tclPkg.c: fixed package version check to disallow 1.2..3
	[Bug: 2539]

	* unix/Makefile.in: fixed gendate target - this never worked
	since RCS was intro'd.
	* generic/tclGetDate.y: updated to reflect previous changes
	to tclDate.c (leap year calc) and added CEST and UCT time zone